Signed-off-by: qwertyuiopcode <3354794846@qq.com>

--- a/404.html
+++ b/404.html
@@ -89,14 +89,14 @@ p {
 <body>
 	<div id="wrapper">
 		<a href="">
-			<img class="fade" src="./images/transparent-404page.png">
+			<img class="fade" src="https://cdn.jsdelivr.net/gh/famousliterature/warmradio@gh-pages/images/transparent-404page.png">
 		</a>
 		<div>
 			<h1 class="fade">温馨提示：您访问的地址不存在！</h1>
 			<p class="fade">你正在寻找的页面被吃掉了！</p>
 			<p class="fade">
 				<a href="url" onclick="javascript:window.history.back(-1);return false;">返回上一个页面</a>
-				<a class="link" href="/404pages/index.html">返回首页</a>
+				<a class="link" href="https://famousliterature.github.io/warmradio/">返回首页</a>
 			</p>
 		</div>
 	</div>
